Vývoj webových aplikácií v prostredí cloudu/projekt/GITOPS/infrastructure/mongo/mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      instance: mongo-express
  template:
    metadata:
      labels:
        instance: mongo-express
    spec:
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
      containers:
      - name: mongo-express
        image: mongo-express:1.0.0-alpha
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
        volumeMounts:
        - mountPath: "/data/db"
          name: mongo-storage
        resources:
          limits:
            memory: 1Gi
            cpu: "0.5"
          requests:
            memory: 256Mi
            cpu: "0.1"
