Vývoj webových aplikácií v prostredí cloudu/projekt/GITOPS/infrastructure/mongo/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      instance: mongodb
  template:
    metadata:
      labels:
        instance: mongodb
    spec:
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
      containers:
      - name: mongodb-container
        image: mongo:6.0.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: "/data/db"
          name: mongo-storage
        # following 2 environment variables are defined by MongoDB in order to protect access
        resources:
          limits:
            memory: 2Gi
            cpu: "1"
          requests:
            memory: 1Gi
            cpu: "0.1"
