Vývoj webových aplikácií v prostredí cloudu/projekt/GITOPS/infrastructure/mongo/mongo-express-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mongo-express-service
spec:
  type: NodePort
  selector:
    instance: mongo-express
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    nodePort: 30003
