Vývoj webových aplikácií v prostredí cloudu/projekt/GITOPS/infrastructure/mongo/mongodb-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mongodb-service
spec:
  type: ClusterIP
  selector:
    instance: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
